--- a/audio.html
+++ b/audio.html
@@ -9,5 +9,9 @@
     <audio controls>
       <source src="audio/runaway.mp3" type="audio/mpeg" />
     </audio>
+    <h1>Contoh audio loop</h1>
+    <audio controls loop>
+      <source src="audio/runaway copy.mp3" type="audio/mpeg" />
+    </audio>
   </body>
 </html>
