--- a/video.html
+++ b/video.html
@@ -9,5 +9,10 @@
     <video controls>
       <source src="video/swiss.mp4" type="video/mp4" />
     </video>
+    <h1>Contoh Video Gif</h1>
+    <video autoplay loop muted playsinline>
+      <source src="video/swiss.webm" type="video/webm" />
+      <source src="video/swiss.mp4" type="video/mp4" />
+    </video>
   </body>
 </html>
