--- a/04/heading.html
+++ b/04/heading.html
@@ -4,11 +4,11 @@
     <title>Tutorial Heading di HTML</title>
   </head>
   <body>
-    <h1>Ini aqshal tampan</h1>
-    <h2>Ini aqshal tampan</h2>
-    <h3>Ini aqshal tampan</h3>
-    <h4>Ini aqshal tampan</h4>
-    <h5>Ini aqshal tampan</h5>
-    <h6>Ini aqshal tampan</h6>
+    <h1>halooo guyss</h1>
+    <h2>halooo guyss</h2>
+    <h3>halooo guyss</h3>
+    <h4>halooo guyss</h4>
+    <h5>halooo guyss</h5>
+    <h6>halooo guyss</h6>
   </body>
 </html>
